# image_translator

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
app/: __init__.py  constants.py  utils.py
model/: en_infer.onnx
tests/: test_ocr.py
