[project]
name = "imgtran"
version = "0.0.1"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi[standard]>=0.115.6",
    "gradio>=5.12.0",
    "rapidocr-onnxruntime>=1.4.3",
    "shapely>=2.0.6",
    "wand>=0.6.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = '.'
